[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/player/src/state_machine/state_machine.gd" type="Script" id=1]
[ext_resource path="res://src/player/src/state_machine/player_states/_movement.gd" type="Script" id=2]
[ext_resource path="res://src/player/src/state_machine/player_states/idle.gd" type="Script" id=3]
[ext_resource path="res://src/player/src/player_controller.gd" type="Script" id=4]
[ext_resource path="res://src/player/src/state_machine/player_states/walking.gd" type="Script" id=5]
[ext_resource path="res://src/player/src/state_machine/player_states/jumping.gd" type="Script" id=6]
[ext_resource path="res://src/player/src/state_machine/player_states/falling.gd" type="Script" id=7]
[ext_resource path="res://src/player/src/state_machine/player_states/charging.gd" type="Script" id=8]
[ext_resource path="res://src/player/src/state_machine/player_states/charge_falling.gd" type="Script" id=9]
[ext_resource path="res://src/player/src/state_machine/player_states/charge_jumping.gd" type="Script" id=10]
[ext_resource path="res://src/player/src/state_machine/player_states/knockback.gd" type="Script" id=11]
[ext_resource path="res://src/player/src/camera/camera_controller.gd" type="Script" id=12]
[ext_resource path="res://src/ui/debug/StatusLabels.tscn" type="PackedScene" id=13]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=2]
radius = 0.5

[sub_resource type="RayShape" id=3]

[sub_resource type="ViewportTexture" id=8]
viewport_path = NodePath("StatusLabels/Viewport")

[sub_resource type="SphereShape" id=7]

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 4 )

[node name="DefaultCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="ColliderMesh" type="MeshInstance" parent="DefaultCollisionShape"]
mesh = SubResource( 2 )
material/0 = null

[node name="SlopeRayCollisionShape1" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 3 )

[node name="StateMachine" type="Node" parent="." groups=[
"state_machine",
]]
script = ExtResource( 1 )
initial_state = NodePath("Movement/Idle")

[node name="Movement" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 3 )

[node name="Walking" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 5 )

[node name="Jumping" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 6 )

[node name="Falling" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 7 )

[node name="Charging" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 8 )

[node name="ChargeJumping" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 10 )

[node name="ChargeFalling" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 9 )

[node name="Knockback" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 11 )

[node name="StatusLabels" parent="." instance=ExtResource( 13 )]

[node name="Sprite3D" parent="StatusLabels" index="1"]
texture = SubResource( 8 )

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 12 )

[node name="Camera" type="ClippedCamera" parent="CameraPivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 16, 0, 0 )
current = true
near = 0.01
far = 1000.0
margin = 2.0
clip_to_areas = true

[node name="Area" type="Area" parent="CameraPivot/Camera"]
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="CameraPivot/Camera/Area"]
shape = SubResource( 7 )

[node name="MaxRayCast" type="RayCast" parent="CameraPivot"]
enabled = true
cast_to = Vector3( 16, 0, 0 )

[node name="MinRayCast" type="RayCast" parent="CameraPivot"]
enabled = true
cast_to = Vector3( 2, 0, 0 )

[editable path="StatusLabels"]
